GA tracking, open new window for links

--- a/src/index.html
+++ b/src/index.html
@@ -11,48 +11,41 @@
     <meta property="og:title" content="TurboDrive - Interactive Showreel - Mobile Version" />
     <meta property="og:site_name" content="TurboDrive - Mobile" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://m.turbodrive.tv/" />
+    <meta property="og:url" content="http://www.turbodrive.tv/" />
     <meta property="og:image" content="http://www.turbodrive.tv/img/share_square.jpg" />
     <meta property="og:description" content="Are you ready to get back out your VCR? Let me show you Turbodrive and introduce my work and skills as Interactive Motion Designer. I'm available and ready to work with you right now!" />
     <title>TURBODRIVE Mobile - Interactive Showreel by Silvère Maréchal</title>
     
     <link rel="author" href="https://www.google.com/+SilvèreMaréchal"/>
     <link rel="publisher" href="https://www.google.com/+SilvèreMaréchal"/>
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
-    <link rel="icon" type="image/png" href="/favicon-196x196.png" sizes="196x196">
-    <link rel="icon" type="image/png" href="/favicon-160x160.png" sizes="160x160">
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/favicon/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/favicon/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/favicon/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicon/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/favicon/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/favicon/apple-touch-icon-152x152.png">
+    <link rel="icon" type="image/png" href="/favicon/favicon-196x196.png" sizes="196x196">
+    <link rel="icon" type="image/png" href="/favicon/favicon-160x160.png" sizes="160x160">
+    <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="/favicon/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="/favicon/favicon-32x32.png" sizes="32x32">
     <meta name="msapplication-TileColor" content="#27162f">
-    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+    <meta name="msapplication-TileImage" content="/favicon/mstile-144x144.png">
     
     <link type="text/css" rel="stylesheet" href="css/turbodrive-mobile.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/modernizr.js"></script>
     <script type="text/javascript" src="js/turbodrive-mobile.js"></script>
     <script type="text/javascript">
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-36681977-3']);
-        _gaq.push(['_setDomainName', 'turbodrive.tv']);
-        _gaq.push(['_setAllowLinker', true]);
-        _gaq.push(['_trackPageview']);
+         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        (function() {
-            var ga = document.createElement('script');
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
+  ga('create', 'UA-36681977-3', 'auto');
+  ga('send', 'pageview');
     </script>
 </head>
 
@@ -118,7 +111,7 @@
         <div class="logo">
             <span aria-hidden="true" data-icon="&#xe607;"></span>
         </div>
-        <button type="button" class="play-reel" id="play-pause">
+        <button type="button" class="play-reel trackEvent" id="play-pause" data-event="button,playreel,homepage">
             <span aria-hidden="true" data-icon="&#xe602;"></span><span class="text-play">Play the reel</span>
         </button>
     </div>
@@ -130,7 +123,7 @@
         <div class="logo">
             <span aria-hidden="true" data-icon="&#xe607;"></span>
         </div>
-        <a href="#" data-id="hire-me">
+        <a href="#" data-id="hire-me" class="trackEvent" data-event="link,hireme,header">
             <div class="hire-me">
                 <span>Hire me!</span>
             </div>
@@ -143,11 +136,11 @@
             <div id="about" class="section about">
                 <h2 class="name">SILVÈRE MARÉCHAL</h2>
                 <h1 class="title">INTERACTIVE MOTION DESIGNER</h1>
-                <p class="intro">Hi! I'm Silvère, a guy broadly specialized in front-end development and motion design. My passion is about bridging these both fields for giving life to concepts efficiently through interactive experiences.<br/><br/>
-You’ll find here main things you should know about me. As well you can check out <a href="http://www.turbodrive.tv/blog/">my blog</a> where I share tips and experiments.<br/><br/>
-Feel free to <a href="#" data-id="email">contact me</a> if interested in any collaboration!</p>
-                <a href="#skillsfield" data-section="skillsfield" class="red-button">find out my skills field</a><br/>
-                <a href="https://www.linkedin.com/in/silveremarechal" class="wireframe-button">View my profile on Linkedin<span class="icon linkedin"></span></a>
+                <p class="intro">Hi! I'm Silvère, a guy broadly specialized in front-end development and motion design. My passion is about combining these both fields for giving life to concepts effectively through interactive experiences.<br/><br/>
+You’ll find here main things you should know about me. As well you can check out <a href="http://www.turbodrive.tv/blog/" target="_blank" class="trackEvent" data-event="link,blog,about">my blog</a> where I share tips and experiments.<br/><br/>
+Feel free to <a href="#" data-id="email" class="trackEvent" data-event="link,contact,about">contact me</a> if interested in any collaboration!</p>
+                <a href="#skillsfield" data-section="skillsfield" class="red-button trackEvent"  data-event="link,skillsfield,about">find out my skills field</a><br/>
+                <a href="https://www.linkedin.com/in/silveremarechal" target="_blank" class="wireframe-button trackSocial trackEvent" data-event="button,linkedin,about" data-network="facebook" data-action="viewprofile">View my profile on Linkedin<span class="icon linkedin"></span></a>
                 <div class="glass-background"></div>
             </div>
 
@@ -241,7 +234,7 @@ Feel free to <a href="#" data-id="email">contact me</a> if interested in any col
 In the goal to synchronize and/or prepare videos for interactions, I’m pretty comfortable with the following compositing techniques: keying, rotoscoping and 2D/3D match moving.<br/><br/>
 As well, I have a good knowledge of video format and ways to export, integrate videos, track data and drive them by programming.</p>
                     <h4><span class="icons"><span aria-hidden="true" data-icon="&#xe604;"></span></span><span class="skill-title">Research and development</span></h4>
-                    <p id="research">As problem solver, I’m quite proactive in testing and exploring experimental techniques and fields. I create project prototypes and hand-made tools to enhance workflow when needed.<br/><br/>Check out my blog to read some technical tips and see experiments.</p>
+                    <p id="research">As problem solver, I’m quite proactive in testing and exploring experimental techniques and fields. I create project prototypes and hand-made tools to enhance workflow when needed.<br/><br/>Check out <a href="http://www.turbodrive.tv/blog" target="_blank" class="trackEvent" data-event="link,blog,research">my blog</a> to read some technical tips and see experiments.</p>
                     <h4><span class="icons"><span aria-hidden="true" data-icon="&#xe601;"></span><span aria-hidden="true" data-icon="&#xe603;"></span></span><span class="skill-title">Editing / 3D Modeling</span></h4>
                     <p id="editing">Editing and 3D Modeling are 2 fields which are crossing my main skills such as motion design. Though they are less my speciality, I frequently work on or contribute to these as a part of the whole project production.<br/><br/>In this way I’m also pretty comfortable in collaborating with video editors and 3D artists.</p>
                     <div class="glass-background skills"></div>            
@@ -308,42 +301,42 @@ As well, I have a good knowledge of video format and ways to export, integrate v
                 <h1 id="share-section">Share</h1>
                 <p class="share-block">Share this page on your favorite social network:</p>
                 <p class="icons-list">
-                    <a href="http://www.facebook.com/sharer/sharer.php?u=http://www.turbodrive.tv/" target="_blank" class="buttonShare facebook" title="Share Turbodrive on Facebook">
+                    <a href="http://www.facebook.com/sharer/sharer.php?u=http://www.turbodrive.tv/" target="_blank" class="buttonShare facebook" title="Share Turbodrive on Facebook" data-network="facebook" data-action="share">
                         <span class="menu-icon" aria-hidden="true" data-icon="&#xe612;"></span>
                         <span class="screen-reader-text">Share Turbodrive on Facebook</span>
                     </a>
-                    <a href="https://twitter.com/share?url=http://www.turbodrive.tv" target="_blank" class="buttonShare twitter" title="Share Turbodrive on Twitter">
+                    <a href="https://twitter.com/share?url=http://www.turbodrive.tv" target="_blank" class="buttonShare twitter" title="Share Turbodrive on Twitter" data-network="twitter" data-action="share">
                         <span class="menu-icon" aria-hidden="true" data-icon="&#xe611;"></span>
                         <span class="screen-reader-text">Share Turbodrive on Twitter</span>
                     </a>
-                    <a href="https://plus.google.com/share?url=http://www.turbodrive.tv" target="_blank" class="buttonShare googleplus" title="Share Turbodrive on Google+">
+                    <a href="https://plus.google.com/share?url=http://www.turbodrive.tv" target="_blank" class="buttonShare googleplus" title="Share Turbodrive on Google+" data-network="googleplus" data-action="share">
                         <span class="menu-icon" aria-hidden="true" data-icon="&#xe60d;"></span>
                         <span class="screen-reader-text">Share Turbodrive on Google+</span>
                     </a>
                 </p>
                 <p>Or follow and check me out:</p>
                 <p class="icons-list">
-                    <a href="https://www.linkedin.com/in/silveremarechal" target="_blank" class="buttonShare linkedin" title="View my profile on Linkedin">
+                    <a href="https://www.linkedin.com/in/silveremarechal" target="_blank" class="buttonShare linkedin" title="View my profile on Linkedin" data-network="linkedin" data-action="viewprofile">
                         <span class="menu-icon" aria-hidden="true" data-icon="&#xe60e;"></span>
                         <span class="screen-reader-text">View my profile on Linkedin</span>
                     </a>
-                    <a href="https://www.facebook.com/silvere.marechal" target="_blank" class="buttonShare facebook"  title="View my Facebook profile">
+                    <a href="https://www.facebook.com/silvere.marechal" target="_blank" class="buttonShare facebook"  title="View my Facebook profile" data-network="facebook" data-action="viewprofile">
                         <span class="menu-icon" aria-hidden="true" data-icon="&#xe612;"></span>
                         <span class="screen-reader-text">View my Facebook profile</span>
                     </a>
-                    <a href="https://plus.google.com/+SilvèreMaréchal?rel=author" rel="me" target="_blank" class="buttonShare googleplus" title="Me on Google+">
+                    <a href="https://plus.google.com/+SilvèreMaréchal?rel=author" rel="me" target="_blank" class="buttonShare googleplus" title="Me on Google+" data-network="googleplus" data-action="viewprofile">
                         <span class="menu-icon" aria-hidden="true" data-icon="&#xe60d;"></span>
                         <span class="screen-reader-text">Me on Google+</span>
                     </a>
-                    <a href="https://www.vimeo.com/turbodrive/" target="_blank" class="buttonShare vimeo"  title="View my Vimeo profile">
+                    <a href="https://www.vimeo.com/turbodrive/" target="_blank" class="buttonShare vimeo"  title="View my Vimeo profile" data-network="vimeo" data-action="viewprofile">
                         <span class="menu-icon" aria-hidden="true" data-icon="&#xe610;"></span>
                         <span class="screen-reader-text">View my Vimeo profile</span>
                     </a>
-                    <a href="http://www.pinterest.com/trbdrv/" target="_blank" class="buttonShare pinterest"  title="View my Pinterest boards">
+                    <a href="http://www.pinterest.com/trbdrv/" target="_blank" class="buttonShare pinterest"  title="View my Pinterest boards" data-network="pinterest" data-action="viewprofile">
                         <span class="menu-icon" aria-hidden="true" data-icon="&#xe60f;"></span>
                         <span class="screen-reader-text">View my Pinterest boards</span>
                     </a>
-                    <a href="https://github.com/turbodrive/" target="_blank" class="buttonShare github"  title="Explore my code and contributions on Github">
+                    <a href="https://github.com/turbodrive/" target="_blank" class="buttonShare github"  title="Explore my code and contributions on Github" data-network="github" data-action="viewprofile">
                         <span class="menu-icon" aria-hidden="true" data-icon="&#xe614;"></span>
                         <span class="screen-reader-text">Explore my code and contributions on Github</span>
                     </a>
