added new icons

--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="language" content="en" />
-    <meta name="description" content="Are you ready to get back out your VCR? Let me show you Turbodrive and introduce my work and skills as Interactive Motion Designer. I'm available and ready to work with you right now!" />
+    <meta name="description" content="Are you ready to get back out your VCR? Let me show you TurboDrive and introduce my work and skills as Interactive Motion Designer. I'm available and ready to work with you right now!" />
     <meta name="keywords" content="motion,design,reel,showreel,portfolio,book,interactive,motion design, motion designer,flash,actionscript,stage3d,javascript,webgl,Silvère,Maréchal,vcr,vhs" />
 
-    <meta property="og:title" content="TurboDrive - Interactive Showreel - Mobile Version" />
-    <meta property="og:site_name" content="TurboDrive - Mobile" />
+    <meta property="og:title" content="TurboDrive - Interactive Showreel" />
+    <meta property="og:site_name" content="TurboDrive" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://www.turbodrive.tv/" />
     <meta property="og:image" content="http://www.turbodrive.tv/img/share_square.jpg" />
-    <meta property="og:description" content="Are you ready to get back out your VCR? Let me show you Turbodrive and introduce my work and skills as Interactive Motion Designer. I'm available and ready to work with you right now!" />
-    <title>TURBODRIVE Mobile - Interactive Showreel by Silvère Maréchal</title>
+    <meta property="og:description" content="Are you ready to get back out your VCR? Let me show you TurboDrive and introduce my work and skills as Interactive Motion Designer. I'm available and ready to work with you right now!" />
+    <title>TurboDrive Mobile - Showreel by Silvère Maréchal</title>
     
     <link rel="author" href="https://www.google.com/+SilvèreMaréchal"/>
     <link rel="publisher" href="https://www.google.com/+SilvèreMaréchal"/>
@@ -53,8 +53,8 @@
     
     <div class="warning-mobile">
         <a href="#" data-id="mobile-info">
-        <div class="warning-header"><span aria-hidden="true" data-icon="&#xe615;"></span><h1>Try out Turbodrive as interactive experience!</h1></div></a>
-        <div class="white-bg"><p>Turbodrive has been designed to run on bigger screens and on devices supporting recent features such as inline videos and CSS 3D transform.</p><p>Though you'll find here essential information and links, try out this website on dektop or tablet for a better experience.</p></div>
+        <div class="warning-header"><span aria-hidden="true" data-icon="&#xe615;"></span><h1>Try out TurboDrive as interactive experience!</h1></div></a>
+        <div class="white-bg"><p>TurboDrive has been designed to run on bigger screens and on devices supporting recent features such as inline videos and CSS 3D transform.</p><p>Though you'll find here essential information and links, try out this website on dektop or tablet for a better experience.</p></div>
     </div>
     <div class="menu" role="navigation">        
         <button class="lines-button x" type="button" role="button" aria-label="Toggle Navigation">
@@ -301,17 +301,17 @@ As well, I have a good knowledge of video format and ways to export, integrate v
                 <h1 id="share-section">Share</h1>
                 <p class="share-block">Share this page on your favorite social network:</p>
                 <p class="icons-list">
-                    <a href="http://www.facebook.com/sharer/sharer.php?u=http://www.turbodrive.tv/" target="_blank" class="buttonShare facebook" title="Share Turbodrive on Facebook" data-network="facebook" data-action="share">
+                    <a href="http://www.facebook.com/sharer/sharer.php?u=http://www.turbodrive.tv/" target="_blank" class="buttonShare facebook" title="Share TurboDrive on Facebook" data-network="facebook" data-action="share">
                         <span class="menu-icon" aria-hidden="true" data-icon="&#xe612;"></span>
-                        <span class="screen-reader-text">Share Turbodrive on Facebook</span>
+                        <span class="screen-reader-text">Share TurboDrive on Facebook</span>
                     </a>
-                    <a href="https://twitter.com/share?url=http://www.turbodrive.tv" target="_blank" class="buttonShare twitter" title="Share Turbodrive on Twitter" data-network="twitter" data-action="share">
+                    <a href="https://twitter.com/share?url=http://www.turbodrive.tv" target="_blank" class="buttonShare twitter" title="Share TurboDrive on Twitter" data-network="twitter" data-action="share">
                         <span class="menu-icon" aria-hidden="true" data-icon="&#xe611;"></span>
-                        <span class="screen-reader-text">Share Turbodrive on Twitter</span>
+                        <span class="screen-reader-text">Share TurboDrive on Twitter</span>
                     </a>
-                    <a href="https://plus.google.com/share?url=http://www.turbodrive.tv" target="_blank" class="buttonShare googleplus" title="Share Turbodrive on Google+" data-network="googleplus" data-action="share">
+                    <a href="https://plus.google.com/share?url=http://www.turbodrive.tv" target="_blank" class="buttonShare googleplus" title="Share TurboDrive on Google+" data-network="googleplus" data-action="share">
                         <span class="menu-icon" aria-hidden="true" data-icon="&#xe60d;"></span>
-                        <span class="screen-reader-text">Share Turbodrive on Google+</span>
+                        <span class="screen-reader-text">Share TurboDrive on Google+</span>
                     </a>
                 </p>
                 <p>Or follow and check me out:</p>
