contact form improvements

--- a/src/index.html
+++ b/src/index.html
@@ -270,7 +270,7 @@ As well, I have a good knowledge of video format and ways to export, integrate v
                             <a class="email" href="#">info[at]turbodrive[dot]tv
                                 <img class="externalLink" src="images/picto_externalLink.svg"></a>
                             <br/>Silvère Maréchal
-                            <br/><a class="tel" href="tel:+1 347-982-7503">+1 347-982-7503</a></p>
+                            <br/><a class="tel" href="tel:+33642412132">+33 (0) 642412132</a></p>
                     </div>
                 </div>
             </div>
@@ -287,12 +287,10 @@ As well, I have a good knowledge of video format and ways to export, integrate v
              <div class="form-feedback success">
                 <h2>Thank you!</h2>
                 <p>Your message has been send!<br/>You'll receive a answer soon.</p>
-                 <button id="success-validation" class="wireframe-button right light-bg">OK</button>
             </div>
             <div class="form-feedback error">
                 <h2>Error</h2>
                 <p id="error-content">Error Content</p>
-                <button id="error-validation" class="wireframe-button right light-bg">OK</button>
             </div>        
         </div>
 
