--- a/src/universalnav.html
+++ b/src/universalnav.html
@@ -43,19 +43,25 @@
 
 <body>
     
-    <div class="nav info" role="navigation">
+    <div id="nav" class="nav blog" role="navigation">
         <div class="brand"><img src="images/logo_shades.png"><div class="red-line"></div></div>
         <div class="menu">
             <div class="main">
                 <ul>
                     <li><a href="#">Showreel</a>
-                        <div class="over-details">Save your time by watching this video. Oldies but goodies!</div></li>
+                        <div class="over-details">Save your time by watching this video.<br/>Oldies but goodies!</div></li>
                     <li><a href="#">Projects</a>
                         <div class="over-details">Wider selection of works.</div></li>
                     <li><a href="#">About me</a>
                         <div class="over-details">Skills and experience.</div></li>
-                    <li><a href="#">Blog</a>
-                        <div class="over-details">News, tips and experiments.</div></li>
+                    <li><a href="#" id="blog-dropdown">Blog<span class="caret"></span></a>
+                        <div class="over-details">News, tips and experiments.</div>
+                        <ul class="sub-menu">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">CSS 3D transitions workflow using After Effects</a></li>
+                            <li><a href="#">About the blog</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#">Contact</a>
                         <div class="over-details">Drop me a line, I don't bite.</div></li>
                 </ul>
@@ -68,6 +74,8 @@
             </div>
             
         </div>
+        <div id="info-button" class="info"><a href="#" class="icon"></a></div>
+        <div id="close-button" class="close"><a href="#" class="icon"></a></div>
     </div>
 </body>
 </html>
