mobile home-nav implementation

--- a/src/universalnav.html
+++ b/src/universalnav.html
@@ -44,17 +44,31 @@
 <body>
     
     <div id="nav" class="nav blog" role="navigation">
-        <div class="brand"><img src="images/logo_shades.png"><div class="red-line"></div></div>
+        <div class="brand"><img src="images/nav/logo_shades.png"><div class="red-line"></div></div>
         <div class="menu">
             <div class="main">
                 <ul>
-                    <li><a href="#">Showreel</a>
-                        <div class="over-details">Save your time by watching this video.<br/>Oldies but goodies!</div></li>
-                    <li><a href="#">Projects</a>
-                        <div class="over-details">Wider selection of works.</div></li>
-                    <li><a href="#">About me</a>
-                        <div class="over-details">Skills and experience.</div></li>
-                    <li><a href="#" id="blog-dropdown">Blog<span class="caret"></span></a>
+                    <li>
+                        <div class="menu-button">
+                            <a href="#">Showreel</a>
+                        </div>
+                        <div class="over-details">Save your time by watching this video.<br/>Oldies but goodies!</div>
+                    </li>
+                    <li>
+                        <div class="menu-button">
+                            <a href="#">Projects</a>
+                        </div>
+                        <div class="over-details">Wider selection of works.</div>
+                    </li>
+                    <li>
+                        <div class="menu-button">
+                            <a href="#">About me</a>
+                        </div>
+                        <div class="over-details">Skills and experience.</div>
+                    </li>
+                    <li>
+                        <div class="menu-button"><a href="#" id="blog-dropdown">Blog<span class="caret"></span></a>
+                        </div>
                         <div class="over-details">News, tips and experiments.</div>
                         <ul class="sub-menu">
                             <li><a href="#">Home</a></li>
@@ -62,7 +76,9 @@
                             <li><a href="#">About the blog</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Contact</a>
+                    <li>
+                        <div class="menu-button"><a href="#">Contact</a>
+                        </div>
                         <div class="over-details">Drop me a line, I don't bite.</div></li>
                 </ul>
             </div>
@@ -76,6 +92,7 @@
         </div>
         <div id="info-button" class="info"><a href="#" class="icon"></a></div>
         <div id="close-button" class="close"><a href="#" class="icon"></a></div>
+        <div id="open-button" class="open-menu"><a href="#" class="icon"></a></div>
     </div>
 </body>
 </html>
