--- a/src/universalnav.html
+++ b/src/universalnav.html
@@ -41,7 +41,7 @@
     <script type="text/javascript" src="js/universal-nav.js"></script>
 </head>
 
-<body>
+<body class="reset">
     
     <div id="nav" class="nav blog" role="navigation">
         <div class="brand"><img src="images/nav/logo_shades.png"><div class="red-line"></div></div>
@@ -92,7 +92,9 @@
         </div>
         <div id="info-button" class="info"><a href="#" class="icon"></a></div>
         <div id="close-button" class="close"><a href="#" class="icon"></a></div>
-        <div id="open-button" class="open-menu"><a href="#" class="icon"></a></div>
+        
+        <div class="background"><div class="background-image"></div></div>
+        <div class="navbar"><div id="brand-icon"></div><div id="open-button" class="open-menu"><a href="#" class="icon"></a></div></div>
     </div>
 </body>
 </html>
